feat: dynamic character editor [wip]

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -18,29 +18,23 @@
 
   <div>
     <%= form.label :xp, style: "display: block" %>
-    <%= form.number_field :xp %>
+    <%= form.text_field :xp %>
   </div>
 
   <div>
     <%= form.label :rocks, style: "display: block" %>
-    <%= form.number_field :rocks %>
+    <%= form.text_field :rocks %>
   </div>
 
   <div>
     <%= form.label :gems, style: "display: block" %>
-    <%= form.number_field :gems %>
+    <%= form.text_field :gems %>
   </div>
 
   <div>
     <%= form.label :hair, style: "display: block" %>
-    <%= form.number_field :hair %>
+    <%= form.text_field :hair %>
   </div>
-
-  <div>
-    <%= form.label :note, style: "display: block" %>
-    <%= form.text_area :note %>
-  </div>
-
   <div>
     <%= form.submit %>
   </div>
